--- a/assignment_4/heading.html
+++ b/assignment_4/heading.html
@@ -5,12 +5,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Web development</title>
 	<style type="text/css">
+		.topnavbar {
+			background-color: #333;
+			height: 50px;
+			top: 0;
+			width: 100%;
+			position: fixed;
+			left: 0;
+		}
+
 		.toplink {
 			float: right;
 			display: block;
 			color: #f2f2f2;
 			text-align: center; padding: 14px 16px;
-			text-decoration: none
+			text-decoration: none; 
 		}
 
 		.sidelink {
@@ -34,6 +43,14 @@
 			background-color: green
 		}
 
+		.hover-area p {
+			position: relative;
+			color: white;
+			top: 50%;
+			text-align: center;
+			font-weight: bold;
+		}
+
 		.sidebar {
 			top: 50px;
 			width: 300px;
@@ -42,35 +59,84 @@
 			display: none
 		}
 
-		.hover-area:hover + .sidebar, .hover-area:hover + .sidebar:hover {
-			display: flex;
+		.sidebar ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			width: 300px;
+			background-color: #f1f1f1;
+			height: 100%;
+			overflow: auto;
 		}
 
+		.hover-area:hover + .sidebar {
+			display: flex;
+		}
 
 		.cover-all {
 			display: flex;
 			top:-0.5px;
-			left:0px;
+			left: 0px;
 			height: 100%;
 			width: 100%;
 			position: fixed;
 		}
 
+		@media (max-width: 600px) {
+			.topnavbar {
+				display: none
+			}
+
+			.hover-area {
+				background-color: blue;
+				height: 50px;
+				top: 0;
+				width: 100%;
+				position: fixed;
+				left: 0;
+			}
+
+			.sidebar {
+				top: 50px;
+				width: 100%;
+				height: 60%;
+				position: fixed;
+				display: none;
+			}
+
+			.sidebar ul {
+				list-style-type: none;
+				margin: 0;
+				padding: 0;
+				width: 100%;
+				background-color: #f1f1f1;
+				height: 60%;
+				overflow: auto;
+			}
+
+			.hover-area p {
+				position: static;
+			}
+
+			.hover-area:hover + .sidebar {
+				display: block;
+			}
+		}
 
 	</style>
 </head>
 <body>
-	<div class="topnavbar" style="background-color: #333;height: 50px;top: 0; width: 100%; position: fixed; left: 0">
+	<div class="topnavbar">
 		 <a class="toplink" href="index.html">HTML</a>
 		 <a class="toplink" href="../css/index.html">CSS</a>
 		 <a class="toplink" href="../js/index.html">Javascript</a>
 	</div>
 	<div class="cover-all">
 		<div class="hover-area">
-			<p style="position: relative; color: white; top: 50%; text-align: center;font-weight: bold;">Click me</p>
+			<p>Click me</p>
 		</div>
 		<div class="sidebar">
-			<ul style="list-style-type: none; margin: 0; padding: 0; width: 300px; background-color: #f1f1f1; height: 100%; overflow: auto;">
+			<ul>
 				<li><a style="display: block; padding: 8px 16px; color: white; text-decoration: none; background-color: #4CAF50" href='headings.html'>Headings</a></li>
 				<li><a class="sidelink" href="paragraphs.html">Paragraphs</a></li>
 				<li><a class="sidelink" href="links.html">Links</a></li>
